--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
     "react-scripts": "0.2.1"
   },
   "dependencies": {
+    "babel-polyfill": "^6.13.0",
     "react": "^15.2.1",
-    "react-dom": "^15.2.1"
+    "react-dom": "^15.2.1",
+    "react-redux": "^4.4.5",
+    "redux": "^3.5.2"
   },
   "scripts": {
     "start": "react-scripts start",
