--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   },
   "dependencies": {
     "babel-polyfill": "^6.13.0",
+    "lodash": "^4.15.0",
+    "node-uuid": "^1.4.7",
     "react": "^15.2.1",
     "react-dom": "^15.2.1",
     "react-redux": "^4.4.5",
