--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^15.2.1",
     "react-dom": "^15.2.1",
     "react-redux": "^4.4.5",
+    "react-router": "^2.6.1",
     "redux": "^3.5.2"
   },
   "scripts": {
