--- a/package.json
+++ b/package.json
@@ -51,7 +51,9 @@
     "react-dom": "^15.2.1",
     "react-redux": "^4.4.5",
     "react-router": "^3.0.0-alpha.3",
-    "redux": "^3.5.2"
+    "redux": "^3.5.2",
+    "redux-logger": "^2.6.1",
+    "redux-promise": "^0.5.3"
   },
   "scripts": {
     "start": "node ./scripts/start.js",
